--- a/app/src/main/res/layout/fragment_emoji.xml
+++ b/app/src/main/res/layout/fragment_emoji.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="210dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
@@ -26,6 +26,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:visibility="gone"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/tv_recent"
