1、优化表情界面和软键盘只能显示其一的问题，后序还有待优化

--- a/app/src/main/res/layout/activity_direct_msg.xml
+++ b/app/src/main/res/layout/activity_direct_msg.xml
@@ -71,6 +71,7 @@
                         android:layout_height="@dimen/toolbar_icon_size"
                         android:layout_marginLeft="@dimen/fab_margin"
                         android:layout_gravity="center_vertical"
+                        android:focusable="false"
                         android:src="@drawable/ic_post_emoj" />
                     <EditText
                         android:id="@+id/et_content"
@@ -94,7 +95,7 @@
                 <FrameLayout
                     android:id="@+id/rl_additional"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="170dp"
                     android:visibility="gone"
                     android:background="@color/colorItemNormal">
                 </FrameLayout>
