--- a/app/src/main/res/layout/fragment_emoji.xml
+++ b/app/src/main/res/layout/fragment_emoji.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="170dp"
         android:orientation="vertical">
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
