--- a/app/src/main/res/layout/activity_status_detail.xml
+++ b/app/src/main/res/layout/activity_status_detail.xml
@@ -13,22 +13,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBgNormal"
+        android:background="@color/colorToolbarBg"
         android:fitsSystemWindows="true"
         android:orientation="vertical">
 
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorToolbarBg">
+        <!--<android.support.design.widget.AppBarLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
+            <!---->
+        <!--</android.support.design.widget.AppBarLayout>-->
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                android:background="@color/colorToolbarBg"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
-        </android.support.design.widget.AppBarLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:background="@color/colorToolbarBg"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
@@ -57,6 +57,7 @@
                         android:layout_marginBottom="8dp"
                         android:background="@color/colorItemNormal"
                         android:orientation="vertical"
+                        android:layout_marginTop="8dp"
                         android:paddingBottom="8dp"
                         android:paddingTop="@dimen/fab_margin"
                         app:layout_collapseMode="parallax"
