--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -55,8 +55,8 @@
             android:layout_marginRight="@dimen/fab_margin"
             android:layout_marginBottom="40dp"
             android:visibility="gone"
-            android:paddingLeft="@dimen/fab_margin"
-            android:paddingRight="@dimen/fab_margin"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:background="@color/colorRetweetedBg">
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:textColor="@color/colorTextLevel3"
-                android:textSize="16sp"/>
+                android:textSize="14sp"/>
         </LinearLayout>
 
         <RelativeLayout
