--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -276,6 +276,7 @@
 
 
             <RelativeLayout
+                android:id="@+id/item_theme"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/layout_item"
