--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:background="@color/colorToolbarBg"
+                android:background="@color/colorItemNormal"
                 android:orientation="horizontal">
 
                 <ImageView
