1、换肤功能：优化不同主题下的状态栏字体颜色 2、扫描界面：自定义扫描界面以替代第三库中的默认界面 3、请求权限功能：解决权限不断请求的bug

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -37,7 +37,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="我"
-                        android:textColor="@color/colorTextLevel1"
+                        android:textColor="@color/colorToolbarText"
                         android:textSize="18sp" />
 
                     <ImageView
