--- a/app/src/main/res/layout/fragment_msg.xml
+++ b/app/src/main/res/layout/fragment_msg.xml
@@ -28,7 +28,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:textColor="@color/colorTextLevel1"
+                        android:textColor="@color/colorToolbarText"
                         android:textSize="18sp"
                         android:text="消息"/>
 
