--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="MyTabLayoutTextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/colorTextLevel1</item>
+        <item name="android:textColor">@color/colorToolbarText</item>
     </style>
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">18sp</item>
@@ -47,9 +47,9 @@
     </style>
 
     <style name="HomeTitleColorSel">
-        <item name="android:textColor">@color/colorTextLevel1</item>
+        <item name="android:textColor">@color/colorToolbarText</item>
     </style>
     <style name="HomeTitleColorNor">
-        <item name="android:textColor">@color/colorTextLevel2</item>
+        <item name="android:textColor">@color/colorToolbarHint</item>
     </style>
 </resources>
