1、登录界面：加判断——当设备系统不支持设置状态栏黑色字体时，替换默认白色主题 2、换肤功能：优化不同主题下toolbar的字体颜色

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,25 +46,6 @@
     <color name="colorToolbarBg">@color/colorPrimary</color>
     <color name="colorToolbarBg_night">#262626</color>
 
-    <color name="colorToolbarText">@color/colorTextLevel1</color>
-    <color name="colorToolbarText_b">#ffffffff</color>
-    <color name="colorToolbarText_c">#ffffffff</color>
-    <color name="colorToolbarText_d">#ffffffff</color>
-    <color name="colorToolbarText_e">#ffffffff</color>
-    <color name="colorToolbarText_f">#ffffffff</color>
-    <color name="colorToolbarText_g">#ffffffff</color>
-    <color name="colorToolbarText_h">#ffffffff</color>
-    <color name="colorToolbarText_i">#ffffffff</color>
-    <color name="colorToolbarText_j">#ffffffff</color>
-    <color name="colorToolbarText_k">#ffffffff</color>
-    <color name="colorToolbarText_l">#ffffffff</color>
-    <color name="colorToolbarText_m">#ffffffff</color>
-    <color name="colorToolbarText_n">#ffffffff</color>
-    <color name="colorToolbarText_o">#ffffffff</color>
-    <color name="colorToolbarText_p">#ffffffff</color>
-
-    <color name="colorToolbarHint">#DF8DAD</color>
-
     <color name="colorBgNormal">#eeeeee</color>
     <color name="colorBgNormal_night">#000000</color>
     <color name="colorItemNormal">#ffffffff</color>
@@ -81,6 +62,44 @@
     <color name="colorTextLevel3_night">#6b6c74</color>
     <color name="colorTextLevel4">#CCCCCC</color>
     <color name="colorTextLevel4_night">#303134</color>
+
+    <color name="colorToolbarText">#ff333333</color>
+    <color name="colorToolbarText_a">#ff333333</color>
+    <color name="colorToolbarText_b">#ffffffff</color>
+    <color name="colorToolbarText_c">#ffffffff</color>
+    <color name="colorToolbarText_d">#ffffffff</color>
+    <color name="colorToolbarText_e">#ffffffff</color>
+    <color name="colorToolbarText_f">#ffffffff</color>
+    <color name="colorToolbarText_g">#ffffffff</color>
+    <color name="colorToolbarText_h">#ffffffff</color>
+    <color name="colorToolbarText_i">#ffffffff</color>
+    <color name="colorToolbarText_j">#ffffffff</color>
+    <color name="colorToolbarText_k">#ffffffff</color>
+    <color name="colorToolbarText_l">#ffffffff</color>
+    <color name="colorToolbarText_m">#ffffffff</color>
+    <color name="colorToolbarText_n">#ffffffff</color>
+    <color name="colorToolbarText_o">#ffffffff</color>
+    <color name="colorToolbarText_p">#ffffffff</color>
+
+    <color name="colorToolbarHint">#ff737373</color>
+    <!--#ffDF8DAD-->
+    <color name="colorToolbarHint_a">#ff737373</color>
+    <color name="colorToolbarHint_b">#99ffffff</color>
+    <color name="colorToolbarHint_c">#99ffffff</color>
+    <color name="colorToolbarHint_d">#99ffffff</color>
+    <color name="colorToolbarHint_e">#99ffffff</color>
+    <color name="colorToolbarHint_f">#99ffffff</color>
+    <color name="colorToolbarHint_g">#99ffffff</color>
+    <color name="colorToolbarHint_h">#99ffffff</color>
+    <color name="colorToolbarHint_i">#99ffffff</color>
+    <color name="colorToolbarHint_j">#99ffffff</color>
+    <color name="colorToolbarHint_k">#99ffffff</color>
+    <color name="colorToolbarHint_l">#99ffffff</color>
+    <color name="colorToolbarHint_m">#99ffffff</color>
+    <color name="colorToolbarHint_n">#99ffffff</color>
+    <color name="colorToolbarHint_o">#99ffffff</color>
+    <color name="colorToolbarHint_p">#99ffffff</color>
+
 
     <color name="colorTextStatusLink">#507daf</color>
     
