--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,35 +31,78 @@
                 android:background="@color/colorItemNormal"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/nav_btn_home"
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="12dp"
                     android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/ic_nav_home" />
-
-                <ImageView
-                    android:id="@+id/nav_btn_msg"
+                    android:layout_weight="1">
+                    <ImageView
+                        android:id="@+id/nav_btn_home"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_nav_home"/>
+                    <TextView
+                        android:id="@+id/tv_notice_home"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_toRightOf="@id/nav_btn_home"
+                        android:layout_marginLeft="-8dp"
+                        android:background="@drawable/tv_notice_num"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        android:textColor="#fff"
+                        android:textSize="12sp"/>
+                </RelativeLayout>
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="12dp"
                     android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/ic_nav_msg" />
-
-                <ImageView
-                    android:id="@+id/nav_btn_user"
+                    android:layout_weight="1">
+                    <ImageView
+                        android:id="@+id/nav_btn_msg"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_nav_msg"/>
+                    <TextView
+                        android:id="@+id/tv_notice_msg"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_toRightOf="@id/nav_btn_msg"
+                        android:layout_marginLeft="-8dp"
+                        android:background="@drawable/tv_notice_num"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        android:textColor="#fff"
+                        android:textSize="12sp"/>
+                </RelativeLayout>
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="12dp"
                     android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/ic_nav_user" />
+                    android:layout_weight="1">
+                    <ImageView
+                        android:id="@+id/nav_btn_user"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_nav_user"/>
+                    <TextView
+                        android:id="@+id/tv_notice_user"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_toRightOf="@id/nav_btn_user"
+                        android:layout_marginLeft="-8dp"
+                        android:background="@drawable/tv_notice_num"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        android:textColor="#fff"
+                        android:textSize="12sp"/>
+                </RelativeLayout>
             </LinearLayout>
         </android.support.design.widget.AppBarLayout>
     </LinearLayout>
