1、关系列表界面：修复因设置透明状态栏导致的布局上移 2、换肤功能：优化不同主题下toolbar的返回图标以及标题颜色 3、修改toolbar的图标默认size

--- a/app/src/main/res/layout/activity_base_list.xml
+++ b/app/src/main/res/layout/activity_base_list.xml
@@ -15,12 +15,16 @@
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/statusbar_height"
+                android:background="@color/colorToolbarBg"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorToolbarBg"
                 app:contentInsetStart="0dp"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:titleTextAppearance="@style/Toolbar.TitleText" />
