--- a/app/src/main/res/layout/activity_status_detail.xml
+++ b/app/src/main/res/layout/activity_status_detail.xml
@@ -28,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:background="@color/colorToolbarBg"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:titleTextColor="@color/colorToolbarText"
+            app:titleTextAppearance="@style/Toolbar.TitleText" />
 
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
