--- a/app/src/main/res/layout/activity_direct_msg.xml
+++ b/app/src/main/res/layout/activity_direct_msg.xml
@@ -27,7 +27,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 android:background="@color/colorToolbarBg"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:titleTextColor="@color/colorToolbarText"
+                app:titleTextAppearance="@style/Toolbar.TitleText" />
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v7.widget.RecyclerView
