--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -22,8 +22,8 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?android:attr/actionBarSize"
-                    android:background="@color/colorPrimary"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"
+                    android:background="@color/colorToolbarBg"
+                    app:titleTextColor="@color/colorToolbarText"
                     app:titleTextAppearance="@style/Toolbar.TitleText" />
             </android.support.design.widget.AppBarLayout>
 
