--- a/app/src/main/res/layout/fragment_msg.xml
+++ b/app/src/main/res/layout/fragment_msg.xml
@@ -18,8 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 android:background="@color/colorToolbarBg"
-                app:contentInsetStart="0dp"
-                app:popupTheme="@style/AppTheme.PopupOverlay" >
+                app:contentInsetStart="0dp" >
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
