--- a/app/src/main/res/layout/item_msg_right.xml
+++ b/app/src/main/res/layout/item_msg_right.xml
@@ -13,7 +13,7 @@
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorBgNormal"
+    android:background="@color/colorItemNormal"
     android:orientation="vertical"
     android:paddingBottom="16dp">
     
@@ -36,8 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/fab_margin"
-        android:layout_marginLeft="@dimen/fab_margin"
-        android:layout_marginRight="@dimen/fab_margin">
+        android:layout_marginLeft="56dp"
+        android:layout_marginRight="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_head"
@@ -67,8 +67,8 @@
             android:background="@drawable/ic_bubble_right"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:textSize="16sp"
-            android:textColor="#333333"/>
+            android:textSize="15sp"
+            android:textColor="#737373"/>
         <ImageView
             android:id="@+id/iv_picture"
             android:layout_width="wrap_content"
