--- a/app/src/main/res/layout/item_msg_left.xml
+++ b/app/src/main/res/layout/item_msg_left.xml
@@ -12,7 +12,7 @@
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorItemNormal"
+    android:background="@color/colorBgNormal"
     android:orientation="vertical"
     android:paddingBottom="16dp">
     
@@ -22,14 +22,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/tv_chat_date"
         android:paddingTop="2dp"
         android:paddingBottom="2dp"
         android:paddingLeft="@dimen/fab_margin"
         android:paddingRight="@dimen/fab_margin"
         android:text="@{msg.created_at}"
-        android:textSize="14sp"
-        android:textColor="#fff"/>
+        android:textSize="12sp"
+        android:textColor="@color/colorTextLevel2"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
