--- a/app/src/main/res/layout/activity_direct_msg.xml
+++ b/app/src/main/res/layout/activity_direct_msg.xml
@@ -89,8 +89,7 @@
                         android:id="@+id/iv_commit"
                         android:layout_width="@dimen/toolbar_icon_size"
                         android:layout_height="@dimen/toolbar_icon_size"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_vertical"
                         android:src="@drawable/ic_post_send" />
                 </LinearLayout>
                 <FrameLayout
