1、微博详情界面：转发微博区域，LinearLayout未设置排列方向

--- a/app/src/main/res/layout/activity_status_detail.xml
+++ b/app/src/main/res/layout/activity_status_detail.xml
@@ -162,7 +162,8 @@
                             android:paddingBottom="8dp"
                             android:paddingLeft="@dimen/fab_margin"
                             android:paddingRight="@dimen/fab_margin"
-                            android:paddingTop="8dp">
+                            android:paddingTop="8dp"
+                            android:orientation="vertical">
 
                             <TextView
                                 android:id="@+id/retweeted_content"
