1、修改“我”界面的布局； 2、修改底部tab栏图标size； 3、资源名rename；

--- a/app/src/main/res/drawable/btn_reply.xml
+++ b/app/src/main/res/drawable/btn_reply.xml
@@ -10,7 +10,7 @@
                 android:color="@color/colorPatingLine"
                 android:width="1px"/>
             <solid
-                android:color="@color/layout_item_nol" />
+                android:color="@color/layout_item_nor" />
         </shape>
     </item>
     <item
