--- a/app/src/main/res/drawable/lin_round_bg_dialog.xml
+++ b/app/src/main/res/drawable/lin_round_bg_dialog.xml
@@ -14,7 +14,7 @@
             <corners
                 android:radius="5dp"/>
             <solid
-                android:color="@color/layout_item_nol" />
+                android:color="@color/layout_item_nor" />
         </shape>
     </item>
 </selector>
