--- a/app/src/main/res/drawable/layout_item.xml
+++ b/app/src/main/res/drawable/layout_item.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="true" android:drawable="@color/layout_item_sel"/>
-    <item android:state_pressed="false" android:drawable="@color/layout_item_nol"/>
+    <item android:state_pressed="false" android:drawable="@color/layout_item_nor"/>
 </selector>
