--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,13 +12,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/statusbar_height"
+                android:background="@color/colorPrimaryDark"/>
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 android:background="@color/colorToolbarBg"
                 app:contentInsetStart="0dp">
-
                 <RelativeLayout
                     android:id="@+id/ll"
                     android:layout_width="match_parent"
