修改个别间距问题

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -112,7 +112,7 @@
             android:id="@+id/container_statuses"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="?android:attr/actionBarSize"
+            android:layout_marginTop="68dp"
             android:background="@color/colorBgNormal">
 
         </FrameLayout>
