--- a/app/src/main/res/layout/fragment_msg.xml
+++ b/app/src/main/res/layout/fragment_msg.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <android.support.design.widget.CoordinatorLayout
+    <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -45,8 +45,7 @@
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="68dp">
+            android:layout_height="match_parent">
 
             <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
@@ -62,5 +61,5 @@
             </android.support.v4.widget.NestedScrollView>
         </android.support.v4.widget.SwipeRefreshLayout>
 
-    </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
 </layout>
