--- a/app/src/main/res/layout/item_direct_msg.xml
+++ b/app/src/main/res/layout/item_direct_msg.xml
@@ -69,8 +69,8 @@
                 android:textSize="12sp" />
             <TextView
                 android:id="@+id/tv_notice_num"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
+                android:layout_width="@dimen/size_notice_bubble"
+                android:layout_height="@dimen/size_notice_bubble"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:background="@drawable/tv_notice_num"
@@ -78,7 +78,7 @@
                 android:visibility="gone"
                 android:text="@{``+userlist.unread_count}"
                 android:textColor="#fff"
-                android:textSize="12sp"/>
+                android:textSize="@dimen/text_notice_bubble"/>
         </RelativeLayout>
         <View
             android:layout_width="match_parent"
