--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -20,7 +20,11 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:scaleType="centerCrop"
-            android:background="@drawable/pic_user_cover_test"/>
+            android:background="@drawable/pic_blur_default"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="#33000000"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
